--- a/README
+++ b/README
@@ -1,2 +1,24 @@
-# Config
-This are my Linux Configurations.
+
+  ____            _                 ____             __ _
+ / ___| ___ _ __ | |_ ___   ___    / ___|___  _ __  / _(_) __ _ ___
+| |  _ / _ \ '_ \| __/ _ \ / _ \  | |   / _ \| '_ \| |_| |/ _` / __|
+| |_| |  __/ | | | || (_) | (_) | | |__| (_) | | | |  _| | (_| \__ \
+ \____|\___|_| |_|\__\___/ \___/   \____\___/|_| |_|_| |_|\__, |___/
+                                                          |___/
+
+This is my Linux Configuration. Feel free to dig through them and use some configurations if you wish.
+Terminal Programs:
+ZDOTDIR=~/.config/zsh <- to move all the zsh files
+Shell: zsh
+Editor: neovim
+File Manager: rover
+
+Graphical Setup(xorg):
+NOTE: dwm has patches and one of them is to autostart ~/.dwm/autostart.sh.
+Window Manager: dwm + slstatus
+Application Launcher: dmenu
+Terminal Emulator: urxvt (using urxvtd and urxvtc)
+Fonts: JetBrains Mono (Nerd Fonts)
+Browser: qutebrowser
+
+I'm not using wayland yet but will probably soon.
